Dil seçenekleri değişti

--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -21,12 +21,11 @@
                             </div>
                             <a href="#" class="bk-btn">Booking Now</a>
                             <div class="language-option">
-                                <img src="{% static 'img/flag.jpg'%}" alt="">
-                                <span>EN <i class="fa fa-angle-down"></i></span>
+                                <img src="{% static 'img/flag.png'%}" alt="">
+                                <span>TR <i class="fa fa-angle-down"></i></span>
                                 <div class="flag-dropdown">
                                     <ul>
-                                        <li><a href="#">Zi</a></li>
-                                        <li><a href="#">Fr</a></li>
+
                                     </ul>
                                 </div>
                             </div>
