Hakkımızda-iletişim-referans sayfaları eklendi

--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -48,19 +48,20 @@
                         <div class="nav-menu">
                             <nav class="mainmenu">
                                 <ul>
-                                    <li class="active"><a href="./index.html">Home</a></li>
-                                    <li><a href="./rooms.html">Rooms</a></li>
-                                    <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./pages.html">Pages</a>
+                                    <li class="active"><a href="/">Anasayfa</a></li>
+                                    <li><a href="/arabalar">Arabalar</a>
                                         <ul class="dropdown">
-                                            <li><a href="./room-details.html">Room Details</a></li>
-                                            <li><a href="./blog-details.html">Blog Details</a></li>
-                                            <li><a href="#">Family Room</a></li>
-                                            <li><a href="#">Premium Room</a></li>
+                                            <li><a href="#">BMW </a></li>
+                                            <li><a href="#">Mercedes</a></li>
+                                            <li><a href="#">Honda</a></li>
+                                            <li><a href="#">Ford</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="./blog.html">News</a></li>
-                                    <li><a href="./contact.html">Contact</a></li>
+                                    <li><a href="/hakkimizda">Hakkımızda</a></li>
+                                    <li><a href="/referanslar">Referanslar</a></li>
+
+                                    <li><a href="/iletisim">İletişim</a></li>
+                                    <!--<li><a href="./contact.html">Contact</a></li> -->
                                 </ul>
                             </nav>
                             <div class="nav-right search-switch">
