--- a/home/templates/iletisim.html
+++ b/home/templates/iletisim.html
@@ -39,20 +39,21 @@
                         </table>
                     </div>
                 </div>
+
+
+
+
                 <div class="col-lg-7 offset-lg-1">
-                    <form action="#" class="contact-form">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <input type="text" placeholder="Adınız">
-                            </div>
-                            <div class="col-lg-6">
-                                <input type="text" placeholder="E-mailiniz">
-                            </div>
-                            <div class="col-lg-12">
-                                <textarea placeholder="Mesajınız"></textarea>
-                                <button type="submit">Gönder</button>
-                            </div>
-                        </div>
+                    {% if messages %}
+                       {% for message in messages %}
+                           <div class="alert alert-{{ message.tags }}" role="alert"> {{ message }} </div>
+                       {% endfor %}
+                    {% endif %}
+                    <form action="" method="POST" class="contact-form">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+
+                    <input type="submit" value="SEND FORM">
                     </form>
                 </div>
             </div>
