--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -47,9 +47,9 @@
             </div>
         </div>
         <div class="hero-slider owl-carousel">
-            <div class="hs-item set-bg" data-setbg="{% static 'img/hero/hero-1.jpg'%}"></div>
-            <div class="hs-item set-bg" data-setbg="{% static 'img/hero/hero-2.jpg'%}"></div>
-            <div class="hs-item set-bg" data-setbg="{% static 'img/hero/hero-3.jpg'%}"></div>
+            <div class="hs-item set-bg" data-setbg={{setting.slider1.url}}></div>
+            <div class="hs-item set-bg" data-setbg={{setting.slider2.url}}></div>
+            <div class="hs-item set-bg" data-setbg={{setting.slider3.url}}></div>
         </div>
     </section>
     <!-- Hero Section End -->
