index slider yazılar düzenlendi.

--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -6,41 +6,42 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="hero-text">
-                        <h1>Sona A Luxury Hotel</h1>
-                        <p>Here are the best hotel booking sites, including recommendations for international
-                            travel and for finding low-priced hotel rooms.</p>
-                        <a href="#" class="primary-btn">Discover Now</a>
+                        <h1 style="color: #b86e27">ARAÇ KİRALA</h1>
+                        <p style="color: #b86e27">Arayın, Karşılaştırın ve Tasarruf Edin.Fiyat Eşitlemesi
+                            , Çoğu rezervasyonda ücretsiz iptal.
+                        </p>
+                        <a href="#" class="primary-btn">KEŞFETMEYE BAŞLAYIN!</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-5 offset-xl-2 offset-lg-1">
                     <div class="booking-form">
-                        <h3>Booking Your Hotel</h3>
+                        <h3>Aracınızı Kiralayın</h3>
                         <form action="#">
                             <div class="check-date">
-                                <label for="date-in">Check In:</label>
+                                <label for="date-in">Teslim alma tarihi:</label>
                                 <input type="text" class="date-input" id="date-in">
                                 <i class="icon_calendar"></i>
                             </div>
                             <div class="check-date">
-                                <label for="date-out">Check Out:</label>
+                                <label for="date-out">Teslim ediş tarihi:</label>
                                 <input type="text" class="date-input" id="date-out">
                                 <i class="icon_calendar"></i>
                             </div>
                             <div class="select-option">
-                                <label for="guest">Guests:</label>
+                                <label for="guest">ŞUBE:</label>
                                 <select id="guest">
-                                    <option value="">2 Adults</option>
-                                    <option value="">3 Adults</option>
+                                    <option value="">İstanbul</option>
+                                    <option value="">Ankara</option>
                                 </select>
                             </div>
                             <div class="select-option">
-                                <label for="room">Room:</label>
+                                <label for="room">ARAÇ:</label>
                                 <select id="room">
-                                    <option value="">1 Room</option>
-                                    <option value="">2 Room</option>
+                                    <option value="">MERCEDES-2020</option>
+                                    <option value="">BMW-2020</option>
                                 </select>
                             </div>
-                            <button type="submit">Check Availability</button>
+                            <button type="submit">Kontrol Et</button>
                         </form>
                     </div>
                 </div>
