Admin'de kategori'ye girememe hatası aldım list display'de image-tag leri kaldırarak hatayı çözdüm

--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -7,17 +7,17 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="tn-left">
-                            <li><i class="fa fa-phone"></i> (12) 345 67890</li>
+                            <li><i class="fa fa-phone"></i> (+90) 444 0 35</li>
                             <li><i class="fa fa-envelope"></i> ocokyilmaz@gmail.com</li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
                         <div class="tn-right">
                             <div class="top-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="https://www.facebook.com/oguzhancokyilmaz"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.twitter.com/ocokyilmaz"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-tripadvisor"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/oguzhancokyilmaz"><i class="fa fa-instagram"></i></a>
                             </div>
                             <a href="#" class="bk-btn">Booking Now</a>
                             <div class="language-option">
