Category Tree oluşturuluyor

--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -6,25 +6,25 @@
                 <div class="col-lg-6">
                     <div class="about-text">
                         <div class="section-title">
-                            <span>About Us</span>
-                            <h2>Intercontinental LA <br />Westlake Hotel</h2>
+                            <span>Hakkımızda</span>
+                            <h2>RENTCAR'A <br />HOŞGELDİNİZ</h2>
                         </div>
-                        <p class="f-para">Sona.com is a leading online accommodation site. We’re passionate about
-                            travel. Every day, we inspire and reach millions of travelers across 90 local websites in 41
-                            languages.</p>
-                        <p class="s-para">So when it comes to booking the perfect hotel, vacation rental, resort,
-                            apartment, guest house, or tree house, we’ve got you covered.</p>
-                        <a href="#" class="primary-btn about-btn">Read More</a>
+                        <p class="f-para">rentcar.com önde gelen çevrimiçi araç kiralama sitesidir. Seyahat konusunda tutkuluyuz.
+                            Her gün, 41 dilde 90 yerel web sitesinden milyonlarca yolcuya ilham veriyor ve ulaşıyoruz.</p>
+                        <p class="s-para">Mükemmel bir araba kiraladığınızda gerekli her türlü konforu,rahatlığı ve kolaylığı bulabilirsini</p>
+                        <a href="hakkimizda" class="primary-btn about-btn">DAHA FAZLA</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="about-pic">
                         <div class="row">
                             <div class="col-sm-6">
-                                <img src="{% static  'img/about/about-1.jpg'%}" alt="">
+                                <img src="{% static  'img/about/about-1.jpg'%}" alt=""> <br><br>
+                                <img src="{% static  'img/about/about-3.jpg'%}" alt="">
                             </div>
                             <div class="col-sm-6">
-                                <img src="{% static  'img/about/about-2.jpg'%}" alt="">
+                                <img src="{% static  'img/about/about-2.jpg'%}" alt=""><br><br>
+                                <img src="{% static  'img/about/about-4.jpg'%}" alt="">
                             </div>
                         </div>
                     </div>
