--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -19,7 +19,7 @@
                                 <a href="#"><i class="fa fa-tripadvisor"></i></a>
                                 <a href="https://www.instagram.com/oguzhancokyilmaz"><i class="fa fa-instagram"></i></a>
                             </div>
-                            <a href="#" class="bk-btn">Booking Now</a>
+                            <a href="#" class="bk-btn">Araç Kirala</a>
                             <div class="language-option">
                                 <img src="{% static 'img/flag.png'%}" alt="">
                                 <span>TR <i class="fa fa-angle-down"></i></span>
@@ -51,10 +51,10 @@
                                     <li class="active"><a href="/">Anasayfa</a></li>
                                     <li><a href="/arabalar">Arabalar</a>
                                         <ul class="dropdown">
-                                            <li><a href="#">BMW </a></li>
-                                            <li><a href="#">Mercedes</a></li>
-                                            <li><a href="#">Honda</a></li>
-                                            <li><a href="#">Ford</a></li>
+                                            <li><a href="#">EKONOMİK </a></li>
+                                            <li><a href="#">ORTA SINIF</a></li>
+                                            <li><a href="#">ÜST SINIF</a></li>
+                                            <li><a href="#">SUV</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="/hakkimizda">Hakkımızda</a></li>
