Category Tree uygun olsun diye 2 farklı template birleştirdim ve araçlar şeklinde header'a sidebar oturttum.

--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -75,3 +75,42 @@
     <script src="{% static 'js/jquery.slicknav.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
+  <!-- orjinal script bitti -->
+ 
+ <!-- JS
+============================================ -->
+
+    <!-- jQuery JS -->
+    <script src="{% static 'assets/js/vendor/jquery-1.12.4.min.js' %}"></script>
+    <!-- Modernizer JS -->
+    <script src="{% static 'assets/js/vendor/modernizr-2.8.3.min.js' %}"></script>
+    <!-- Popper JS -->
+    <script src="{% static 'assets/js/vendor/popper.min.js' %}"></script>
+    <!-- Bootstrap JS -->
+    <script src="{% static 'assets/js/vendor/bootstrap.min.js' %}"></script>
+
+    <!-- Slick Slider JS -->
+    <script src="{% static 'assets/js/plugins/slick.min.js' %}"></script>
+    <!-- Barrating JS -->
+    <script src="{% static 'assets/js/plugins/jquery.barrating.min.js' %}"></script>
+    <!-- Counterup JS -->
+    <script src="{% static 'assets/js/plugins/jquery.counterup.js' %}"></script>
+    <!-- Nice Select JS -->
+    <script src="{% static 'assets/js/plugins/jquery.nice-select.js' %}"></script>
+    <!-- Sticky Sidebar JS -->
+    <script src="{% static 'assets/js/plugins/jquery.sticky-sidebar.js' %}"></script>
+    <!-- Jquery-ui JS -->
+    <script src="{% static 'assets/js/plugins/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'assets/js/plugins/jquery.ui.touch-punch.min.js' %}"></script>
+    <!-- Lightgallery JS -->
+    <script src="{% static 'assets/js/plugins/lightgallery.min.js' %}"></script>
+    <!-- Scroll Top JS -->
+    <script src="{% static 'assets/js/plugins/scroll-top.js' %}"></script>
+    <!-- Theia Sticky Sidebar JS -->
+    <script src="{% static 'assets/js/plugins/theia-sticky-sidebar.min.js' %}"></script>
+    <!-- Waypoints JS -->
+    <script src="{% static 'assets/js/plugins/waypoints.min.js' %}"></script>
+    <!-- jQuery Zoom JS -->
+    <script src="{% static 'assets/js/plugins/jquery.zoom.min.js' %}"></script>
+
+       <script src="{% static 'assets/js/main.js' %}"></script>
