--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -1,3 +1,4 @@
+
  {% load static %}
 
 <!-- Header Section Begin -->
@@ -14,10 +15,10 @@
                     <div class="col-lg-6">
                         <div class="tn-right">
                             <div class="top-social">
-                                <a href="https://www.facebook.com/oguzhancokyilmaz"><i class="fa fa-facebook"></i></a>
-                                <a href="https://www.twitter.com/ocokyilmaz"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-tripadvisor"></i></a>
-                                <a href="https://www.instagram.com/oguzhancokyilmaz"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/oguzhancokyilmaz"><i class="fab fa-facebook"></i></a>
+                                <a href="https://www.twitter.com/ocokyilmaz"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-tripadvisor"></i></a>
+                                <a href="https://www.instagram.com/oguzhancokyilmaz"><i class="fab fa-instagram"></i></a>
                             </div>
                             <a href="#" class="bk-btn">Araç Kirala</a>
                             <div class="language-option">
@@ -37,26 +38,150 @@
         <div class="menu-item">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2">
-                        <div class="logo">
-                            <a href="./index.html">
-                                <img src="{% static 'img/logo.png'%}" alt="">
-                            </a>
+                   <div class="custom-category_col col-3" style="padding-top: 10px">
+                            <div class="category-menu category-menu-hidden" >
+                                <div class="category-heading" STYLE="background: #FFFFFF "  >
+                                    <h2 class="categories-toggle">
+                                        <span>ARAÇLAR</span>
+                                    </h2>
+                                </div>
+                                <div id="cate-toggle" class="category-menu-list">
+                                    <ul>
+                                        <li class="right-menu"><a href="#">EKONOMİK ARAÇLAR</a>
+                                            <ul class="cat-mega-menu">
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">MERCEDES</a>
+                                                    <ul>
+                                                        <li><a href="#">Aluminum Nonstick</a></li>
+                                                        <li><a href="#">Calphalon</a></li>
+                                                        <li><a href="#">Contemporary</a></li>
+                                                        <li><a href="#">Hard-Anodized</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">BMW</a>
+                                                    <ul>
+                                                        <li><a href="#">Sanai laptops</a></li>
+                                                        <li><a href="#">Byteflight</a></li>
+                                                        <li><a href="#">EXcaliberPC</a></li>
+                                                        <li><a href="#">Gaming Laptops</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">FORD</a>
+                                                    <ul>
+                                                        <li><a href="#">Dual Core</a></li>
+                                                        <li><a href="#">Gaming Monitors</a></li>
+                                                        <li><a href="#">GPS Monitors</a></li>
+                                                        <li><a href="#">Heat Shield</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="right-menu"><a href="#">ORTA SINIF ARAÇLAR</a>
+                                            <ul class="cat-mega-menu">
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">MERCEDES</a>
+                                                    <ul>
+                                                        <li><a href="#">Aluminum Nonstick</a></li>
+                                                        <li><a href="#">Calphalon</a></li>
+                                                        <li><a href="#">Contemporary</a></li>
+                                                        <li><a href="#">Hard-Anodized</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">BMW</a>
+                                                    <ul>
+                                                        <li><a href="#">Sanai laptops</a></li>
+                                                        <li><a href="#">Byteflight</a></li>
+                                                        <li><a href="#">EXcaliberPC</a></li>
+                                                        <li><a href="#">Gaming Laptops</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">FORD</a>
+                                                    <ul>
+                                                        <li><a href="#">Dual Core</a></li>
+                                                        <li><a href="#">Gaming Monitors</a></li>
+                                                        <li><a href="#">GPS Monitors</a></li>
+                                                        <li><a href="#">Heat Shield</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="right-menu"><a href="#">ÜST SINIF ARAÇLAR</a>
+                                            <ul class="cat-mega-menu">
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">MERCEDES</a>
+                                                    <ul>
+                                                        <li><a href="#">Aluminum Nonstick</a></li>
+                                                        <li><a href="#">Calphalon</a></li>
+                                                        <li><a href="#">Contemporary</a></li>
+                                                        <li><a href="#">Hard-Anodized</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">BMW</a>
+                                                    <ul>
+                                                        <li><a href="#">Sanai laptops</a></li>
+                                                        <li><a href="#">Byteflight</a></li>
+                                                        <li><a href="#">EXcaliberPC</a></li>
+                                                        <li><a href="#">Gaming Laptops</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">FORD</a>
+                                                    <ul>
+                                                        <li><a href="#">Dual Core</a></li>
+                                                        <li><a href="#">Gaming Monitors</a></li>
+                                                        <li><a href="#">GPS Monitors</a></li>
+                                                        <li><a href="#">Heat Shield</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="right-menu"><a href="#">SUV ARAÇLAR</a>
+                                            <ul class="cat-mega-menu">
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">MERCEDES</a>
+                                                    <ul>
+                                                        <li><a href="#">Aluminum Nonstick</a></li>
+                                                        <li><a href="#">Calphalon</a></li>
+                                                        <li><a href="#">Contemporary</a></li>
+                                                        <li><a href="#">Hard-Anodized</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">BMW</a>
+                                                    <ul>
+                                                        <li><a href="#">Sanai laptops</a></li>
+                                                        <li><a href="#">Byteflight</a></li>
+                                                        <li><a href="#">EXcaliberPC</a></li>
+                                                        <li><a href="#">Gaming Laptops</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="right-menu cat-mega-title">
+                                                    <a href="#">FORD</a>
+                                                    <ul>
+                                                        <li><a href="#">Dual Core</a></li>
+                                                        <li><a href="#">Gaming Monitors</a></li>
+                                                        <li><a href="#">GPS Monitors</a></li>
+                                                        <li><a href="#">Heat Shield</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+
+
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-10">
+                    <div class="col-lg-9">
                         <div class="nav-menu">
                             <nav class="mainmenu">
                                 <ul>
                                     <li class="active"><a href="/">Anasayfa</a></li>
-                                    <li><a href="/arabalar">Arabalar</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">EKONOMİK </a></li>
-                                            <li><a href="#">ORTA SINIF</a></li>
-                                            <li><a href="#">ÜST SINIF</a></li>
-                                            <li><a href="#">SUV</a></li>
-                                        </ul>
-                                    </li>
                                     <li><a href="/hakkimizda">Hakkımızda</a></li>
                                     <li><a href="/referanslar">Referanslar</a></li>
 
