--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -24,6 +24,30 @@
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css'%}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/slicknav.min.css'%}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css"/>
+    <!--bitti orjinal -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{% static 'assets/css/vendor/bootstrap.min.css'%}">
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="{% static 'assets/css/vendor/font-awesome.css'%}">
+    <!-- Fontawesome Star -->
+    <link rel="stylesheet" href="{% static 'assets/css/vendor/fontawesome-stars.css'%}">
+    <!-- Ion Icon -->
+    <link rel="stylesheet" href="{% static 'assets/css/vendor/ion-fonts.css'%}">
+    <!-- Slick CSS -->
+    <link rel="stylesheet" href="{% static 'assets/css/plugins/slick.css'%}">
+    <!-- Animation -->
+    <link rel="stylesheet" href="{% static 'assets/css/plugins/animate.css'%}">
+    <!-- jQuery Ui -->
+    <link rel="stylesheet" href="{% static 'assets/css/plugins/jquery-ui.min.css'%}">
+    <!-- Lightgallery -->
+    <link rel="stylesheet" href="{% static 'assets/css/plugins/lightgallery.min.css'%}">
+    <!-- Nice Select -->
+    <link rel="stylesheet" href="{% static 'assets/css/plugins/nice-select.css'%}">
+
+     <!-- Main Style CSS (Please use minify version for better website load performance) -->
+    <link rel="stylesheet" href="{% static 'assets/css/style.css'%}">
+
+
    {% block head %}    {% endblock %}
 </head>
 
