--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -51,12 +51,12 @@
                                      {% load mptt_tags %}
 
                                         {% recursetree category %}
-                                           <li class="right-menu"><a href="/category/{{ node.slug }}">{{ node.title }}</a>
+                                           <li class="right-menu"><a href="/category/{{ node.id }}/{{ node.slug }}">{{ node.title }}</a>
                                             <ul class="cat-mega-menu">
                                                 {% if not node.is_leaf_node %}
                                                     <ul class="children">
                                                     <li class="right-menu cat-mega-title">
-                                                    <a href="#">{{ children }}</a>
+                                                    <a href="/category/{{ node.id }}/{{ node.slug }}">{{ children }}</a>
                                                                              </li>
                                                     </ul>
                                                 {% endif %}
