Ürünlerin Detail sayfası oluşturuldu artık her ürün'e gidilebiliyor

--- a/home/templates/arabalar.html
+++ b/home/templates/arabalar.html
@@ -61,12 +61,12 @@
                                         <td>Benzin</td>
                                     </tr>
                                     <tr>
-                                        <td class="r-o">TİP:</td>
+                                        <td class="r-o">VİTES TİPİ:</td>
                                         <td>Otomatik Vites</td>
                                     </tr>
                                 </tbody>
                             </table>
-                            <a href="/product/{{ rs.id }}/{{ rs.slug }}" class="primary-btn">More Details</a>
+                            <a href="/product/{{ rs.id }}/{{ rs.slug }}" class="primary-btn">Daha Fazla</a>
                         </div>
                     </div>
                 </div>
