--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -23,23 +23,9 @@
                                 <i class="icon_calendar"></i>
                             </div>
                             <div class="check-date">
-                                <label for="date-out">Teslim ediş tarihi:</label>
+                                <label for="date-out">Teslim alma tarihi:</label>
                                 <input type="text" class="date-input" id="date-out">
                                 <i class="icon_calendar"></i>
-                            </div>
-                            <div class="select-option">
-                                <label for="guest">ŞUBE:</label>
-                                <select id="guest">
-                                    <option value="">İstanbul</option>
-                                    <option value="">Ankara</option>
-                                </select>
-                            </div>
-                            <div class="select-option">
-                                <label for="room">ARAÇ:</label>
-                                <select id="room">
-                                    <option value="">MERCEDES-2020</option>
-                                    <option value="">BMW-2020</option>
-                                </select>
                             </div>
                             <button type="submit">Kontrol Et</button>
                         </form>
