--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -87,49 +87,35 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Testimonials</span>
-                        <h2>What Customers Say?</h2>
+                        <span>YORUMLAR</span>
+                        <h2>MÜŞTERİLERİMİZ NELER SÖYLEDİ?</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
+
                 <div class="col-lg-8 offset-lg-2">
                     <div class="testimonial-slider owl-carousel">
+
+                        {% for rs in comments %}
+
                         <div class="ts-item">
-                            <p>After a construction project took longer than expected, my husband, my daughter and I
-                                needed a place to stay for a few nights. As a Chicago resident, we know a lot about our
-                                city, neighborhood and the types of housing options available and absolutely love our
-                                vacation at Sona Hotel.</p>
+                            <p>{{ rs.comment }}</p>
                             <div class="ti-author">
                                 <div class="rating">
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star-half_alt"></i>
+                                    <i {% if rs.rate >= 1 %} class="icon_star" {% endif %}></i>
+                                    <i {% if rs.rate >= 2 %} class="icon_star" {% endif %}></i>
+                                    <i {% if rs.rate >= 3 %} class="icon_star" {% endif %}></i>
+                                    <i {% if rs.rate >= 4 %} class="icon_star" {% endif %}></i>
+                                    <i {% if rs.rate == 5 %} class="icon_star" {% endif %}></i>
                                 </div>
-                                <h5> - Alexander Vasquez</h5>
+                                <h5> - {{rs.user.first_name}} - {{ rs.product }} </h5>
                             </div>
-                            <img src="{% static 'img/testimonial-logo.png'%}" alt="">
+                           <img   src="{% static 'img/testimonial-logo.png'%}" style="height: 100px; width: 100px" alt="">
                         </div>
-                        <div class="ts-item">
-                            <p>After a construction project took longer than expected, my husband, my daughter and I
-                                needed a place to stay for a few nights. As a Chicago resident, we know a lot about our
-                                city, neighborhood and the types of housing options available and absolutely love our
-                                vacation at Sona Hotel.</p>
-                            <div class="ti-author">
-                                <div class="rating">
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star"></i>
-                                    <i class="icon_star-half_alt"></i>
-                                </div>
-                                <h5> - Alexander Vasquez</h5>
-                            </div>
-                            <img src="{% static 'img/testimonial-logo.png'%}" alt="">
-                        </div>
-                    </div>
+                        {% endfor %}
+
+                          </div>
                 </div>
             </div>
         </div>
